<resources>
    <string name="app_name">web</string>
    <string name="topbar_exit">退出</string>
    <string name="topbar_goback">返回</string>
    <string name="topbar_settings">设置</string>
    <string name="topbar_webtitle">网页标题</string>
    <string name="topbar_refresh">刷新</string>
    <string name="topbar_goforward">前进</string>
    <string name="topbar_searchicon">搜索引擎</string>
    <string name="topbar_searchtext">搜索框</string>
    <string name="topbar_cleartext">清除搜索框</string>
    <string name="topbar_search">搜索</string>
    <string name="app_cancel">取消</string>
    <string name="app_copy">复制</string>
    <string name="menu_test_function">测试性功能</string>
    <string name="menu_run_javascript">执行脚本</string>
    <string name="menu_night_mode">夜间模式</string>
    <string name="menu_video_fullscreen">视频自动全屏</string>
    <string name="menu_webpage_operate">网页操作</string>
    <string name="menu_view_source_http">查看源码（http)</string>
    <string name="menu_view_source_js">查看源码(js)</string>
    <string name="menu_view_source_chrome">查看源码(chrome)</string>
    <string name="menu_webpage_fenxi">网页分析</string>
    <string name="menu_web_request_log">网络请求记录</string>
    <string name="menu_save_screenshots">网页截图</string>
    <string name="menu_save_long_screenshots">网页长截图</string>
    <string name="menu_offen_used_function">常用功能</string>
    <string name="menu_share">分享</string>
    <string name="menu_visisit_history">浏览历史</string>
    <string name="menu_clear_webview_cache">清除缓存</string>
    <string name="menu_clear_webview_cookie">清除Cookie</string>
    <string name="menu_upgrade_adlist">更新广告规则</string>
    <string name="menu_get_vip_video">解析VIp</string>
    <string name="menu_exit">退出应用</string>
    <string name="menu_goto_home">转到首页</string>
    <string name="menu_find_source_by_tag">查找网页元素</string>
    <string name="menu_switch_ua">切换UA</string>
    <string name="menu_javascripts">插件</string>

    <string name="app_settings">设置</string>
    <string name="menu_share_to_qq">分享到QQ</string>
    <string name="menu_switch_webview">切换内核</string>
    <string name="string_ok">确定</string>
    <string name="string_cancel">取消</string>
    <string name="main_menu_set_tts">设置TTS</string>
    <string name="menu_shuqian">书签</string>
    <string name="menu_add_shuqian">添加到书签</string>
</resources>
